# SnapEnhance

./: README.md  build.gradle.kts
.github/workflows/: debug.yml  pull_request.yml  release.yml
app/: build.gradle.kts
app/src/main/kotlin/me/rhunk/snapenhance/: LogManager.kt  RemoteFileHandleManager.kt  RemoteSharedLibraryManager.kt  RemoteSideContext.kt
app/src/main/kotlin/me/rhunk/snapenhance/action/: EnumQuickActions.kt
app/src/main/kotlin/me/rhunk/snapenhance/e2ee/: E2EEImplementation.kt
app/src/main/kotlin/me/rhunk/snapenhance/scripting/: RemoteScriptManager.kt
app/src/main/kotlin/me/rhunk/snapenhance/storage/: AppDatabase.kt  Repositories.kt  Theming.kt
common/: build.gradle.kts
common/src/main/assets/lang/: en_US.json
composer/: build.gradle.kts
composer/src/main/ts/: main.ts  types.ts
core/: build.gradle.kts
core/src/main/kotlin/me/rhunk/snapenhance/core/: ModContext.kt  SnapEnhance.kt  XposedLoader.kt
gradle/: libs.versions.toml
manager/: build.gradle.kts
mapper/: build.gradle.kts
mapper/src/main/kotlin/me/rhunk/snapenhance/mapper/: ClassMapper.kt
native/: .gitignore  build.gradle.kts
native/jni/src/: library.cpp  util.h
native/jni/src/hooks/: linker_hook.h
native/rust/: Cargo.toml  build.rs
native/rust/src/: common.rs  config.rs  hook.rs  lib.rs  mapped_lib.rs  sig.rs  util.rs
native/rust/src/modules/: composer_hook.rs  custom_font_hook.rs  duplex_hook.rs  fstat_hook.rs  linker_hook.rs  mod.rs  sqlite_hook.rs  unary_call_hook.rs
native/rust/src/modules/util/: composer_utils.rs  mod.rs
(+131 files in other folders)
